--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -3,12 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:conv="clr-namespace:TradeHubGui.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
-            Tag="STRATEGY RUNNER">
+             Tag="STRATEGY RUNNER">
 
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
+        <conv:InstanceExecutionStateToBrushConverter x:Key="StateToBrush"/>
     </UserControl.Resources>
 
     <Grid x:Name="ContentGrid">
@@ -146,7 +148,8 @@
                                 <DataGridTemplateColumn Header="Key" Width="0.3*" SortMemberPath="InstanceKey">
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
-                                            <Border Padding="10,1,8,2" Margin="0,-10" Background="#0FFF" BorderThickness="9,0,0,0" BorderBrush="{Binding StateBrush}" HorizontalAlignment="Left">
+                                            <Border Padding="10,1,8,2" Margin="0,-10" Background="#0FFF" BorderThickness="9,0,0,0" 
+                                                    BorderBrush="{Binding ExecutionState, Converter={StaticResource StateToBrush}}" HorizontalAlignment="Left">
                                                 <TextBlock Text="{Binding InstanceKey}" Foreground="{Binding BorderBrush, RelativeSource={RelativeSource AncestorType=Border}}" 
                                                          FontWeight="SemiBold" VerticalAlignment="Center">
                                                     <TextBlock.Effect>
