Added InstanceExecutionStateToVisibilityConverter and work on strategy runner

--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -11,6 +11,7 @@
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
         <conv:InstanceExecutionStateToBrushConverter x:Key="StateToBrush"/>
+        <conv:InstanceExecutionStateToVisibilityConverter x:Key="StateToVisibility"/>
     </UserControl.Resources>
 
     <Grid x:Name="ContentGrid">
@@ -166,19 +167,30 @@
                                     <DataGridTemplateColumn.CellTemplate>
                                         <DataTemplate>
                                             <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Right">
-                                                <Button Focusable="False" MinWidth="50" Margin="0,2,4,2" Height="22">
-                                                    <StackPanel Orientation="Horizontal">
-                                                        <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
-                                                        <TextBlock Text="Stop"/>
-                                                    </StackPanel>
-                                                </Button>
+                                                <Grid>
+                                                    <Button Focusable="False" Width="60" Margin="0,2,4,2" Height="22"
+                                                            Visibility="{Binding ExecutionState, Converter={StaticResource StateToVisibility}}">
+                                                        <StackPanel Orientation="Horizontal">
+                                                            <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
+                                                            <TextBlock Text="Start"/>
+                                                        </StackPanel>
+                                                    </Button>
+                                                    <Button Focusable="False" Width="60" Margin="0,2,4,2" Height="22"
+                                                            Visibility="{Binding ExecutionState, Converter={StaticResource StateToVisibility}, ConverterParameter=Invert}">
+                                                        <StackPanel Orientation="Horizontal">
+                                                            <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
+                                                            <TextBlock Text="Stop"/>
+                                                        </StackPanel>
+                                                    </Button>
+                                                </Grid>
 
                                                 <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Edit instance" 
                                                         Command="{Binding DataContext.ShowEditInstanceWindowCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}">
                                                     <Image Width="13" Height="13" Margin="3,2,1,2" Source="{StaticResource imgEdit}" UseLayoutRounding="True"/>
                                                 </Button>
 
-                                                <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Delete instance">
+                                                <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Delete instance"
+                                                        Command="{Binding DataContext.DeleteInstanceCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}">
                                                     <Image Width="12" Height="12" Margin="2" Source="{StaticResource imgDelete}" UseLayoutRounding="True"/>
                                                 </Button>
                                             </StackPanel>
