--- a/TradeHubGui/Views/GeneticOptimizationWindow.xaml
+++ b/TradeHubGui/Views/GeneticOptimizationWindow.xaml
@@ -61,7 +61,7 @@
                 </StackPanel>
             </DockPanel>
 
-            <HeaderedContentControl Grid.Row="1" Header="Parameters" Margin="10,0,10,10">
+            <HeaderedContentControl Grid.Row="1" Header="PARAMETERS" Margin="10,0,10,10">
                 <HeaderedContentControl.Resources>
                     <ResourceDictionary>
                         <Style TargetType="Label">
@@ -115,7 +115,7 @@
                 </StackPanel>
             </Button>
 
-            <HeaderedContentControl Grid.Row="1" Grid.Column="2" Header="Result" Margin="10,0,10,10">
+            <HeaderedContentControl Grid.Row="1" Grid.Column="2" Header="RESULTS" Margin="10,0,10,10">
                 <DataGrid x:Name="ResultDataGrid" 
                             SelectionMode="Single" 
                             IsTextSearchEnabled="True"
